@@ -1,4 +1,4 @@
-SUBDIRS = menu
+SUBDIRS = menu applications
 
 resdir = $(datadir)/hildon-desktop
 res_DATA = \
