@@ -1,0 +1,6 @@
+applicationsdir = $(datadir)/applications/hildon
+applications_DATA = \
+	user-guide.desktop
+
+EXTRA_DIST = $(applications_DATA)
+
